---------------------------------------------------------------------------------------------------
Version: 1.10.9
Date: 2019-09-19
  Features:
    - add LTN entities to picker dolly blacklist
---------------------------------------------------------------------------------------------------
Version: 1.10.8
Date: 2019-04-21
  Bugfixes:
    - Stop distance cache is reset on version updates
---------------------------------------------------------------------------------------------------
Version: 1.10.7
Date: 2019-04-13
  Features:
    - Added on_dispatcher_no_train_found event #173
  Bugfixes:
    - Fixed nil error in debug log introduced in 1.10.6
---------------------------------------------------------------------------------------------------
Version: 1.10.6
Date: 2019-04-06
  Bugfixes:
    - Restore lamp color after fixing stop error #171
    - always start with stop updated after a config change, ensure consistent data and filled tables
---------------------------------------------------------------------------------------------------
Version: 1.10.5
Date: 2019-03-30
  Changes:
    - moved more functionality to Opteras Library
  Bugfixes:
    - signal names are generated properly for locomotives and wagons with localised_name
---------------------------------------------------------------------------------------------------
Version: 1.10.4
Date: 2019-03-19
  Changes:
    - moved functionality to Opteras Library
  Bugfixes:
    - renaming stops in editor can cause errors
---------------------------------------------------------------------------------------------------
Version: 1.10.3
Date: 2019-03-14
  Features:
    - added on_delivery_pickup_complete
  Changes:
    - removed get_ prefix and _event suffix from events
  Bugfixes:
    - fixed potential upgrade path errors
---------------------------------------------------------------------------------------------------
Version: 1.10.2
Date: 2019-03-07
  Features: