@@ -12,6 +12,7 @@ ltn-dispatcher-delivery-timeout=Lieferzeit Time-Out (ticks)
 ltn-dispatcher-requester-delivery-reset=Fahrplan bei Anforderer zurücksetzen
 ltn-dispatcher-finish-loading=Beladung abschließen
 ltn-depot-reset-filters=Depots löschen Filter
+ltn-stop-default-network=Standard Netzwerk ID
 
 [mod-setting-description]
 ltn-interface-console-level=Nachrichten Detailgrad.\n\n0: Off\nKeine Nachrichten werden generiert.\n\n1: Errors & Warnings\nNur Fehler & Warnungen werden generiert.\n\n2: Notifications (default)\nInformiert über grundlegende Informationen wie fehlende Resourcen und erstellte Lieferungen.\n\n3: Detailed Messages\nErweiterte Informationen über Stations- und Zug-Suche.
@@ -29,3 +30,4 @@ ltn-dispatcher-delivery-timeout=Lieferzeit in ticks bevor Züge als vermisst gel
 ltn-dispatcher-requester-delivery-reset=Inaktiv: (default)\nLieferung und Fahrplan werden bei Ankunft im Depot zurück gesetzt.\nÄnderungen an Zügen in Anforderer-Haltestellen haben keine Auswirkung.\n\nAktiv:\nLieferung und Fahrplan werden bei verlassen der Anforderer-Haltestelle zurück gesetzt.\nÄnderungen an Zügen in Anforderer-Haltestellen löscht die Lieferung und setzt den Fahrplan zurück.
 ltn-dispatcher-finish-loading=Aktiv: (default)\nVerhindert verlassen von Haltestellen während Greifarme/Pumpen arbeiten.\n\nInaktiv:\nZüge verlassen Haltestellen unmittelbar nach erreichen ihrer gewünschten Beladung.\nGreifarme bleiben Gegenstände haltend stecken, Tankwaggons enthalten Restmengen.
 ltn-depot-reset-filters=Aktiv: (default)\nFilter und Stapelbegrenzung in Güterwagons werden im Depot gelöscht.
+ltn-stop-default-network=Netzwerk ID wenn kein Signal "Kodierte Netzwerk ID" existiert.
