@@ -14,6 +14,7 @@ ltn-dispatcher-delivery-timeout=Delivery timeout (ticks)
 ltn-dispatcher-requester-delivery-reset=Delivery completes at requester
 ltn-dispatcher-finish-loading=Finish loading
 ltn-depot-reset-filters=Depots reset filters
+ltn-stop-default-network=Default network ID
 
 [mod-setting-description]
 ltn-interface-console-level=Detail level of in game messages.\n\n0: Off\nNo messages will be generated.\n\n1: Errors & Warnings\nPrint only errors and warnings.\n\n2: Notifications (default)\nPrint basic information like missing resources or generating deliveries.\n\n3: Detailed Messages\nPrint detailed information about finding providers and trains.
@@ -31,3 +32,4 @@ ltn-dispatcher-delivery-timeout=Duration in ticks deliveries can take before ass
 ltn-dispatcher-requester-delivery-reset=False: (default)\nDelivery and schedule are reset when train arrives at depot.\nChanges to trains parked at requesting stops have no effect.\n\nTrue:\nDelivery and schedule are reset when train leaves requester.\nChanges to trains parked at requesting stops will remove delivery and reset schedule.
 ltn-dispatcher-finish-loading=True: (default)\nPrevents trains from leaving while inserters/pumps are working by adding 2s inactivity condition.\n\nFalse:\nTrains will leave immediately when all items have been loaded.\nInserters at loading stations will get stuck.
 ltn-depot-reset-filters=True: (default)\nCargo wagons have their filters and stack limitations cleared when entering a depot.
+ltn-stop-default-network=Network ID used for stops without "Encoded Network ID" signal.
